# wxauto-4.0

./: .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TASK_SPEC.md  demo.py  pyproject.toml  test_at.py  test_hand_raise_reply_workflow.py  test_listener_trigger_safe.py  test_module1_basic.py  test_module2_messages.py  test_module3_listener.py  test_module4_windows_moments.py  test_search_quote.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.md  installation.md  quickstart.md
docs/api/: exceptions.md  message.md  moment.md  param.md  response.md  session.md  wechat.md
docs/guide/: listener.md  messaging.md  moments.md
tests/: test_exceptions.py  test_msgs.py  test_param.py  test_reply_queue.py
wxauto4/: __init__.py  logger.py  moment.py  param.py  reply_queue.py  wx.py
wxauto4/msgs/: __init__.py  base.py  mattr.py  msg.py
wxauto4/ui/: base.py  chatbox.py  component.py  main.py  navigationbox.py  sessionbox.py
wxauto4/uia/: __init__.py  _extras.py
wxauto4/utils/: __init__.py  lock.py  tools.py  useful.py  win32.py
